# Codeforces

./: .gitignore  CMakeLists.txt  README.md
samples/: 1336A.txt  1374C_out.txt
scripts/: new_problem.py
src/: 1374C.cpp  1374C.hpp  CMakeLists.txt  main.cpp  solutions.hpp
src/solutions/: 1336A.cpp  1336A.hpp  1352G.cpp  1352G.hpp  1366A.cpp  1366A.hpp  1374C.cpp
tests/: 1336A_test.cpp  1352G_test.cpp  1366A_test.cpp  1374C_test.cpp  CMakeLists.txt  main.cpp
